# trading-opportunities-platform

./: .dockerignore  .gitignore  CORS_FIX_PERMANENT.md  FREE_TIER_GUIDE.md  PRD_refinements.md  PRICE_FIX_SUMMARY.md  QUICK_START.md  README.md  SCANNER_STRATEGY.md  SETUP_SUPABASE.md  STATUS_REPORT.md  docker-compose.dev.yml  docker-compose.yml  env.example  package.json  pnpm-lock.yaml  temp_api_structure.json  turbo.json
.cursor/: mcp.json
.taskmaster/: config.json  state.json
.taskmaster/tasks/: task_001.txt  task_002.txt  tasks.json
.turbo/daemon/: ce1561b9e59f0577-turbo.log.2025-07-31  ce1561b9e59f0577-turbo.log.2025-08-04  ce1561b9e59f0577-turbo.log.2025-08-05
apps/api/: Dockerfile  README.md  alembic.ini  package.json  pyproject.toml  pytest.ini  test_polygon_quick.py  test_probability_calibration.py  test_risk_calculations.py  test_scanner.py  test_scanner_simple.py  test_server.py
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20250105_0001_create_signal_history_and_trades.py  20250813_0001_create_opportunities.py  811654c0aa77_add_user_id_column_and_rls_policies_for_.py
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/db/: database.py
apps/api/app/models/: opportunities.py  opportunity_db.py  risk.py  tracking.py
apps/api/app/risk/: __init__.py  monte_carlo.py
apps/api/app/routers/: health.py  opportunities.py  risk.py  tracking.py
apps/api/app/services/: mock_data.py  polygon_client.py  scanner.py
apps/api/migrations/: run_in_supabase.sql
apps/api/tests/: test_polygon_client.py
apps/api/tests/fixtures/polygon/: aggregates-daily.json  full-market-snapshot.json  single-ticker-snapshot.json
apps/web/: Dockerfile  index.html  nginx.conf  package.json  (+2 more)
docs/: REFERENCES.md  charting-refs.md  fastapi-refs.md  ops-runbook.md  polygon-refs.md  react-query-refs.md  vds-refs.md
scripts/: PRD.txt
(+34 files in other folders)
